update main page

--- a/_config.yml
+++ b/_config.yml
@@ -96,14 +96,14 @@ author:
   flickr           :
   facebook         :
   foursquare       :
-  github           : https://github.com/NUOJIN
+  github           : NUOJIN
   google_plus      :
   keybase          :
   instagram        :
   impactstory      : #"https://profiles.impactstory.org/u/xxxx-xxxx-xxxx-xxxx"
   lastfm           :
   linkedin         : 
-  orcid            : https://orcid.org/my-orcid?orcid=0000-0001-6926-8994
+  orcid            : https://orcid.org/0000-0001-6926-8994
   pinterest        :
   soundcloud       :
   stackoverflow    : # http://stackoverflow.com/users/123456/username
