--- a/_config.yml
+++ b/_config.yml
@@ -82,7 +82,7 @@ analytics:
 author:
   name             : "Nuojin Cheng"
   avatar           : "portrait.jpg"
-  bio              : "3rd Ph.D. Student @CU Boulder"
+  bio              : "Ph.D. Student @CU Boulder"
   location         : "Boulder, CO"
   employer         :
   pubmed           :
