--- a/_config.yml
+++ b/_config.yml
@@ -88,7 +88,7 @@ author:
   pubmed           :
   googlescholar    : https://scholar.google.com/citations?user=0_8g3o8AAAAJ&hl=en
   email            : nuch1756@colorado.edu
-  researchgate     :  # example: "https://www.researchgate.net/profile/yourprofile"
+  researchgate     : https://openreview.net/profile?id=~Nuojin_Cheng1
   uri              :
   bitbucket        :
   codepen          :
